<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.eveningswipe.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.eveningswipe.ui.profile.GalleryFragment"
        android:label="@string/how_to"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.eveningswipe.ui.groups.SlideshowFragment"
        android:label="@string/menu_groups"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_swipe"
        android:name="com.example.eveningswipe.ui.filmswipe.SwipeFragment"
        android:label="@string/menu_swipe"
        tools:layout="@layout/swipe_fragment" />

</navigation>