<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RankingActivity"
    android:background="@color/Canteloupe">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ranking_layout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ranking_ic"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            app:srcCompat="@mipmap/ic_widget"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/ranking_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ranking_ic"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/group_s_result"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="32dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ranking_group_name"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_1"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="24dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/rate1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/_2"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/rate2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie2"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:textStyle="bold"
            android:layout_below="@id/rate2"/>

        <TextView
            android:id="@+id/rate3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie3"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate3"/>
        <TextView
            android:id="@+id/rate4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie4"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate4"/>
        <TextView
            android:id="@+id/rate5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie5"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate5"/>
        <TextView
            android:id="@+id/rate6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie6"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate6"/>
        <TextView
            android:id="@+id/rate7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie7"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/__8"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate7"/>
        <TextView
            android:id="@+id/rate8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie8"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate8"/>
        <TextView
            android:id="@+id/rate9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie9"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/movie10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textSize="18dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColor="@color/Hot_Chocolate"
            android:layout_below="@id/rate9" />
        <TextView
            android:id="@+id/rate10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie10"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/votes"
            android:textColor="@color/Hot_Chocolate"
            android:textSize="14dp"/>

        <Button
            android:id="@+id/refresh_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/movie10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:text="@string/refresh_result"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/refresh_ranking"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttons"
            android:text="@string/back_to_start"
            app:backgroundTint="@null" />

    </RelativeLayout>


</ScrollView>